--- a/Kaicho_main/index.html
+++ b/Kaicho_main/index.html
@@ -34,7 +34,7 @@
 <div class="footer-kaicho mt-5">
     <div class="footer-child">
 <div class="leftsection ">
-    <a href="kaicho-home-dark.html">
+    <a href="kaicho-capital.html">
         <img class="main-kaicho" src="assets/images/k-capital.png" style="height: 147px;"/>
          
     </a>
