--- a/Kaicho_main/career.html
+++ b/Kaicho_main/career.html
@@ -18,7 +18,7 @@
 <body class="kaicho-home">
     <!--NAvbar Start-->
     <nav class="navbar navbar-expand-lg container navbar-default navdark navbar-dark">
-        <a class="navbar-brand kaichobrand" href="kaicho-home-dark.html">Kaicho</a>
+        <a class="navbar-brand kaichobrand" href="kaicho-capital.html">Kaicho</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#moon-lander"
             aria-controls="moon-lander" aria-expanded="false" aria-label="Toggle navigation">
             <img src="assets/images/menu-icon.png" alt="" srcset="">
@@ -56,8 +56,9 @@
                        Our Careers
                     </h2>
                     <h5 class="k-text mt-4">
-                        We are looking for the best but under appreciated talent across all industries. If that sounds like you, shoot us an email about yourself and what you can bring to the team.
+                        We are looking for the best but under appreciated talent across all industries. If that sounds like you, shoot us an email about yourself and what you can bring to the team.                        
                     </h5>
+                    <h3><span><a href=https://mail.google.com/mail/?view=cm&fs=1&to=sogo@kaicho.org target="_blank">Send us a mail.</a></span> </h3>
                     <!-- <button class="k-button arrowbutton mt-4">
                        <span>Send us an email</span> 
                         <img src="assets/images/vr.png" class="arrowright ml-2">
