--- a/Kaicho_main/kaicho-capital.html
+++ b/Kaicho_main/kaicho-capital.html
@@ -18,7 +18,7 @@
 <body class="kaicho-home">
     <!--NAvbar Start-->
     <nav class="navbar navbar-expand-lg container navbar-default navdark navbar-dark">
-        <a class="navbar-brand kaichobrand" href="/kaicho-home-dark.html">Kaicho</a>
+        <a class="navbar-brand kaichobrand" href="/">Kaicho</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#moon-lander"
             aria-controls="moon-lander" aria-expanded="false" aria-label="Toggle navigation">
             <img src="assets/images/menu-icon.png" alt="" srcset="">
@@ -26,15 +26,15 @@
 
         <div class="collapse navbar-collapse" id="moon-lander">
             <ul class="navbar-nav mr-auto kaicho-nav ">
-                <li class="nav-item active">
+                <!-- <li class="nav-item active">
                     <a class="nav-link" href="#">About Us</a>
-                </li>
+                </li> -->
                 <li class="nav-item active">
                     <a class="nav-link" href="portfolio.html">Our Portfolio </a>
                 </li>
-                <li class="nav-item active">
+                <!-- <li class="nav-item active">
                     <a class="nav-link" href="#">News </a>
-                </li>
+                </li> -->
                 <li class="nav-item active">
                     <a class="nav-link" href="career.html">Careers</a>
                 </li>
@@ -61,7 +61,7 @@
                         investors and institutions.
                     </h5>
                     <button class="k-button arrowbutton mt-4">
-                       <span>Send us an email</span> 
+                       <span><a href=https://mail.google.com/mail/?view=cm&fs=1&to=sogo@kaicho.org target="_blank">Send us a mail</a></span> 
                         <img src="assets/images/vr.png" class="arrowright ml-2">
                     </button>
                 </div>
@@ -97,14 +97,14 @@
             <div class="row">
                 <div class="col-12 col-md-6 k-left">
                     <h2 class="k-title">
-                        It does this by providing: 
+                        We provide : 
                     </h2>
                     <h5 class="k-text mt-4">
                         <ul>
                             <li>Exposure to web3 assets</li>
                             <li>Sustainable, constant portfolio growth</li>
                             <li>Inflation hedge via access to USD denominated yield</li>
-                            <li>A mean’s for compounding wealth and encouraging savings</li>
+                            <li>Avenue to compound wealth and encouraging savings</li>
                             <li>Onboarding/offboarding services</li>
                             <li>Cross border/remittance solutions</li>
                         </ul>
