--- a/Kaicho_main/portfolio.html
+++ b/Kaicho_main/portfolio.html
@@ -18,7 +18,7 @@
 <body class="kaicho-home">
     <!--NAvbar Start-->
     <nav class="navbar navbar-expand-lg container navbar-default navdark navbar-dark">
-        <a class="navbar-brand kaichobrand" href="kaicho-home-dark.html">Kaicho</a>
+        <a class="navbar-brand kaichobrand" href="/kaicho-capital.html">Kaicho</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#moon-lander"
             aria-controls="moon-lander" aria-expanded="false" aria-label="Toggle navigation">
             <img src="assets/images/menu-icon.png" alt="" srcset="">
@@ -26,15 +26,15 @@
 
         <div class="collapse navbar-collapse" id="moon-lander">
             <ul class="navbar-nav mr-auto kaicho-nav ">
-                <li class="nav-item active">
+                <!-- <li class="nav-item active">
                     <a class="nav-link" href="#">About Us</a>
-                </li>
+                </li> -->
                 <li class="nav-item active">
                     <a class="nav-link" href="portfolio.html">Our Portfolio </a>
                 </li>
-                <li class="nav-item active">
+                <!-- <li class="nav-item active">
                     <a class="nav-link" href="#">News </a>
-                </li>
+                </li> -->
                 <li class="nav-item active">
                     <a class="nav-link" href="career.html">Careers</a>
                 </li>
