--- a/Kaicho_main/kaicho-capital.html
+++ b/Kaicho_main/kaicho-capital.html
@@ -61,7 +61,7 @@
                         investors and institutions.
                     </h5>
                     <button class="k-button arrowbutton mt-4">
-                       <span><a href=https://mail.google.com/mail/?view=cm&fs=1&to=sogo@kaicho.org target="_blank">Send us a mail</a></span> 
+                       <span><a href="mailto:hello@kaicho.org"></a>hello@kaicho.org</span> 
                         <img src="assets/images/vr.png" class="arrowright ml-2">
                     </button>
                 </div>
