--- a/Kaicho_main/career.html
+++ b/Kaicho_main/career.html
@@ -58,7 +58,7 @@
                         We are looking for the best but under appreciated talent across all industries. If that sounds like you, shoot us an email about yourself and what you can bring to the team.                        
                     </h5>
                     <h3 class="k-text mt-4">Contact us</h3>
-                    <h3><span><a href=https://mail.google.com/mail/?view=cm&fs=1&to=hello@kaicho.org target="_blank">hello@kaich.org</a></span> </h3>
+                    <h3><span><a href=https://mail.google.com/mail/?view=cm&fs=1&to=hello@kaicho.org target="_blank">hello@kaicho.org</a></span> </h3>
                     <!-- <button class="k-button arrowbutton mt-4">
                        <span>Send us an email</span> 
                         <img src="assets/images/vr.png" class="arrowright ml-2">
