--- a/Kaicho_main/career.html
+++ b/Kaicho_main/career.html
@@ -26,14 +26,14 @@
 
         <div class="collapse navbar-collapse" id="moon-lander">
             <ul class="navbar-nav mr-auto kaicho-nav ">
-                <li class="nav-item active">
+                <!-- <li class="nav-item active">
                     <a class="nav-link" href="#">About Us</a>
-                <li class="nav-item active">
+                <li class="nav-item active"> -->
                     <a class="nav-link" href="portfolio.html">Our Portfolio </a>
                 </li>
-                <li class="nav-item active">
+                <!-- <li class="nav-item active">
                     <a class="nav-link" href="#">News </a>
-                </li>
+                </li> -->
                 <li class="nav-item active">
                     <a class="nav-link" href="career.html">Careers</a>
                 </li>
