--- a/kaicho-home-light.html
+++ b/kaicho-home-light.html
@@ -113,6 +113,20 @@
 
     </div>
 
+     <!-- Footer Start  -->
+     <footer class="last mt-5 py-3 bg-dark text-white">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <p><strong>Address:</strong> 1234 Kaicho St, Innovation City, KA 56789</p>
+                </div>
+                <div class="col-md-6 text-md-right">
+                    <p><strong>Email:</strong> hello@kaicho.org</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <!--Scripts-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
