--- a/career.html
+++ b/career.html
@@ -47,8 +47,8 @@
                     <h5 class="k-text mt-4 phone">
                         We are a small team of mission-driven, highly talented, unconventional thinkers. We are very particular about who we add to this team -- exceptional, high-agency programmers, engineers, and analysts just like us. If that sounds like you, shoot us an email with your challenge response. If you have to ask what the challenge is, then this message is not for you.
                     </h5>
-                    <h3 class="k-text mt-4">Contact us</h3>
-                    <h3><span><a href="mailto:hello@kaicho.org" target="_blank">hello@kaicho.org</a></span></h3>
+                    <!-- <h3 class="k-text mt-4">Contact us</h3>
+                    <h3><span><a href="mailto:hello@kaicho.org" target="_blank">hello@kaicho.org</a></span></h3> -->
                 </div>
                 <div class="col-12 col-md-6 order-sm-1">
                     <div class="k-image pl-5">
