--- a/career.html
+++ b/career.html
@@ -18,7 +18,7 @@
 <body class="kaicho-home">
     <!--Navbar Start-->
     <nav class="navbar navbar-expand-lg container navbar-default navdark navbar-dark">
-        <a class="navbar-brand kaichobrand" href="kaicho-capital.html">Kaicho Capital</a>
+        <a class="navbar-brand kaichobrand" href="index.html">Kaicho Digital</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#moon-lander"
             aria-controls="moon-lander" aria-expanded="false" aria-label="Toggle navigation">
             <img src="assets/images/menu-icon.png" alt="" srcset="">
