--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         Kaicho Digital
                     </h2>
                     <h5 class="k-text mt-4 phone">
-                        At Kaicho Digital, we are at the forefront of the AI revolution. As a leading software development company based in London, we specialize in creating bespoke AI-powered solutions that drive measurable business outcomes.
+                        At Kaicho Digital, we are at the forefront of the AI revolution. As a leading software development company we specialize in creating bespoke AI-powered solutions that drive measurable business outcomes.
 
                         With our diverse team of seasoned experts in business and technology, we consistently deliver innovative, reliable, and high-quality digital products that give our clients a competitive edge.
                         
@@ -89,7 +89,7 @@
                     <h5 class="k-text mt-4 phone">
                         At Kaicho Digital, we offer a range of software development services to cater to diverse industry sectors.
 
-                        Our core offerings include website design and development, web application development, and custom software solutions.
+                        Our core offerings include, AI busines process automation website design and development, web application development, and custom software solutions.
                         
                         We deploy the latest technologies and agile methodologies to deliver tailor-made solutions that help our clients gain a competitive edge in the market.
 
