--- a/career.html
+++ b/career.html
@@ -16,39 +16,53 @@
 </head>
 
 <body class="kaicho-home">
-    <!--Navbar Start-->
+    <!--NAvbar Start-->
     <nav class="navbar navbar-expand-lg container navbar-default navdark navbar-dark">
-        <a class="navbar-brand kaichobrand" href="index.html">Kaicho Digital</a>
+        <a class="navbar-brand kaichobrand" href="kaicho-capital.html">Kaicho</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#moon-lander"
             aria-controls="moon-lander" aria-expanded="false" aria-label="Toggle navigation">
             <img src="assets/images/menu-icon.png" alt="" srcset="">
         </button>
 
         <div class="collapse navbar-collapse" id="moon-lander">
-            <ul class="navbar-nav mr-auto kaicho-nav">
-                <li class="nav-item active">
-                    <!-- <a class="nav-link" href="portfolio.html">Our Portfolio</a> -->
+            <ul class="navbar-nav mr-auto kaicho-nav ">
+                <!-- <li class="nav-item active">
+                    <a class="nav-link" href="#">About Us</a>-->
+                <li class="nav-item active"> 
+                    <a class="nav-link" href="portfolio.html">Our Portfolio </a>
                 </li>
+                <!-- <li class="nav-item active">
+                    <a class="nav-link" href="#">News </a>
+                </li> -->
                 <li class="nav-item active">
                     <a class="nav-link" href="career.html">Careers</a>
                 </li>
+
+
+
             </ul>
+
         </div>
+
     </nav>
 
-    <div class="container hirebox">
+    <div class="container">
 
         <div class="section-one">
             <div class="row">
                 <div class="col-12 col-md-6 k-left">
                     <h2 class="k-title">
-                        We are hiring
+                       We are hiring
                     </h2>
-                    <h5 class="k-text mt-4 phone">
-                        We are a small team of mission-driven, highly talented, unconventional thinkers. We are very particular about who we add to this team -- exceptional, high-agency programmers, engineers, and analysts just like us. If that sounds like you, shoot us an email with your challenge response. If you have to ask what the challenge is, then this message is not for you.
+                    <h5 class="k-text mt-4">
+                        We are a small team of mission driven, highly talented, unconventional thinkers. We are very particular about who we add to this team -- exceptional, high agency Engineers and Analysts just like us. If that sounds like you, shoot us an email with your challenge response. If you have to ask what the challenge is, then this message is not for you.                        
                     </h5>
-                    <!-- <h3 class="k-text mt-4">Contact us</h3>
-                    <h3><span><a href="mailto:hello@kaicho.org" target="_blank">hello@kaicho.org</a></span></h3> -->
+                    <h3 class="k-text mt-4">Send your email to:</h3>
+                    <h3><span><a href=https://mail.google.com/mail/?view=cm&fs=1&to=hello@kaicho.org target="_blank">hello@kaicho.org</a></span> </h3>
+                    <!-- <button class="k-button arrowbutton mt-4">
+                       <span>Send us an email</span> 
+                        <img src="assets/images/vr.png" class="arrowright ml-2">
+                    </button> -->
                 </div>
                 <div class="col-12 col-md-6 order-sm-1">
                     <div class="k-image pl-5">
@@ -57,47 +71,9 @@
                 </div>
             </div>
         </div>
+       
 
-        <!-- Open Roles Segment Start -->
-        <div class="jobs mt-5">
-            <h3 class="k-title">Open Roles</h3>
-            <table class="table table-striped mt-3">
-                <thead>
-                    <tr class="textin">
-                        <th>Role</th>
-                        <!-- <th>Description</th> -->
-                        <th>Location</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr class="textin">
-                        <td>Front End Web Developer</td>
-                        <!-- <td>Responsible for implementing visual elements that users see and interact with in a web application.</td> -->
-                        <td>Hybrid-Lagos</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <!-- Open Roles Segment End -->
     </div>
-
-    <!-- Footer Start  -->
-    <footer class="last mt-5 py-3 bg-dark text-white">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <p><strong>Address:</strong> Mulliner Towers, 2nd floor , 39 Alfred Rewane Road, Ikoyi  <br>
-                        Lagos</p>
-                </div>
-                <div class="col-md-6 text-md-right">
-                    <p><strong>Email:</strong> hello@kaicho.org</p>
-                </div>
-            </div>
-        </div>
-    </footer>
-
- 
-    <!-- Footer End -->
 
     <!--Scripts-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
