--- a/portfolio.html
+++ b/portfolio.html
@@ -1,138 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kaicho</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@200;300;400;500;600;700&family=Josefin+Sans:wght@600&family=Open+Sans:wght@300;500&family=Poppins:wght@200;300;400;500;600;700&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <title>Kaicho - Our Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.0/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@200;300;400;500;600;700&family=Josefin+Sans:wght@600&family=Open+Sans:wght@300;500&family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Be Vietnam Pro', sans-serif;
+            background-color: #121212;
+            color: white;
+        }
+        .navbar {
+            background-color: #121212;
+        }
+        .kaichobrand {
+            font-weight: 700;
+            font-size: 1.5rem;
+        }
+        .portfolio-item {
+            margin-bottom: 30px;
+            aspect-ratio: 1 / 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .portfolio-item a {
+            display: flex;
+            width: 100%;
+            height: 100%;
+            align-items: center;
+            justify-content: center;
+            background-color: white;
+            border-radius: 8px;
+            overflow: hidden;
+            transition: all 0.3s ease;
+        }
+        .portfolio-item img {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain;
+            padding: 15px;
+        }
+        .portfolio-item a:hover {
+            box-shadow: 0 0 15px rgba(255, 255, 255, 0.1);
+            transform: scale(1.05);
+        }
+        .k-title {
+            font-size: 2.5rem;
+            font-weight: 700;
+            margin-bottom: 2rem;
+        }
+    </style>
 </head>
-
-<body class="kaicho-home">
-    <!--NAvbar Start-->
-    <nav class="navbar navbar-expand-lg container navbar-default navdark navbar-dark">
-        <a class="navbar-brand kaichobrand" href="/kaicho-capital.html">Kaicho</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#moon-lander"
-            aria-controls="moon-lander" aria-expanded="false" aria-label="Toggle navigation">
-            <img src="assets/images/menu-icon.png" alt="" srcset="">
-        </button>
-
-        <div class="collapse navbar-collapse" id="moon-lander">
-            <ul class="navbar-nav mr-auto kaicho-nav ">
-                <!-- <li class="nav-item active">
-                    <a class="nav-link" href="#">About Us</a>
-                </li> -->
-                <li class="nav-item active">
-                    <a class="nav-link" href="portfolio.html">Our Portfolio </a>
-                </li>
-                <!-- <li class="nav-item active">
-                    <a class="nav-link" href="#">News </a>
-                </li> -->
-                <li class="nav-item active">
-                    <a class="nav-link" href="career.html">Careers</a>
-                </li>
-
-
-
-            </ul>
-
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container">
+            <a class="navbar-brand kaichobrand" href="/kaicho-capital.html">Kaicho</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="portfolio.html">Our Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="career.html">Careers</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-
     </nav>
 
-    <div class="container">
-
-        <div class="section-one" style="margin-top: 10px;">
-            <div class="row">
-                <div class="col-12 col-md-6 k-left">
-                    <h2 class="k-title">
-                       Our Portfolio 
-                    </h2>
-                </div> 
+    <div class="container mt-5">
+        <h2 class="k-title">Our Portfolio</h2>
+        <div class="row">
+            <div class="col-6 col-md-3 portfolio-item">
+                <a href="https://sabi.am">
+                     <img src="assets/images/sabi.jpg" alt="Sabi logo" />
+                     </a>
             </div>
-        </div>
-
-        <div class="container container-cust">
-            <div class="row row-dflx mt-5">
-                <div class="col-12 col-md-4">
-                    <div class="kaicho-content">
-                        <h2 class="mt-4" style="color:white">Sabi</h2>
-                    </div>
-                </div>
-                <div class="col-12 col-md-8">
-                    <div class="image-wrapper" >
-                        <img src="assets/images/sabi.jpg" alt="" style="width: 100%;">
-                    </div>
-                </div>
+            <div class="col-6 col-md-3 portfolio-item">
+                <a href="#">
+                    <img src="assets/images/exodus.png" alt="Exodus" />
+            </a></div>
+            <div class="col-6 col-md-3 portfolio-item">
+                <a href="http://kali-labs.co">
+                    <img src="assets/images/k-labs.png" alt="Kali Labs" />
+            </a>
             </div>
-        </div>
-
-        <div class="container container-cust">
-            <div class="row row-dflx mt-5">
-                <div class="col-12 col-md-4">
-                    <div class="kaicho-content">
-                        <h2 class="mt-4" style="color:white">Zeri</h2>
-                    </div>
-                </div>
-                <div class="col-12 col-md-8">
-                    <div class="image-wrapper" >
-                        <img src="assets/images/crypto.jpg" alt="" style="width: 100%;">
-                    </div>
-                </div>
+            <div class="col-6 col-md-3 portfolio-item">
+                <a href="https://tlj-1.vercel.app">
+                <img src="assets/images/memoryboxlogo.png" alt="MemoryBox" />
+               </a>
+               </div>
+             
+            <!-- <div class="col-6 col-md-3 portfolio-item">
+                <img src="/api/placeholder/200/200" alt="Exodus" />
             </div>
-        </div>
-
-
-
-        <div class="container container-cust">
-            <div class="row row-dflx mt-5">
-                <div class="col-12 col-md-4">
-                    <div class="kaicho-content">
-                        <h2 class="mt-4" style="color:white">Candy Cash</h2>
-                    </div>
-                </div>
-                <div class="col-12 col-md-8">
-                    <div class="image-wrapper" >
-                        <img src="assets/images/sugar.jpg" alt="" style="width: 100%;">
-                    </div>
-                </div>
+            <div class="col-6 col-md-3 portfolio-item">
+                <img src="/api/placeholder/200/200" alt="Company 5 logo" />
             </div>
+            <div class="col-6 col-md-3 portfolio-item">
+                <img src="/api/placeholder/200/200" alt="Company 6 logo" />
+            </div>
+            <div class="col-6 col-md-3 portfolio-item">
+                <img src="/api/placeholder/200/200" alt="Company 7 logo" />
+            </div>
+            <div class="col-6 col-md-3 portfolio-item">
+                <img src="/api/placeholder/200/200" alt="Company 8 logo" />
+            </div>
+            <div class="col-6 col-md-3 portfolio-item">
+                <img src="/api/placeholder/200/200" alt="Company 9 logo" />
+            </div>
+            <div class="col-6 col-md-3 portfolio-item">
+                <img src="/api/placeholder/200/200" alt="Company 10 logo" />
+            </div>
+            <div class="col-6 col-md-3 portfolio-item">
+                <img src="/api/placeholder/200/200" alt="Company 11 logo" />
+            </div>
+            <div class="col-6 col-md-3 portfolio-item">
+                <img src="/api/placeholder/200/200" alt="Company 12 logo" />
+            </div>
+            <div class="col-6 col-md-3 portfolio-item">
+                <img src="/api/placeholder/200/200" alt="Company 13 logo" />
+            </div>
+            <div class="col-6 col-md-3 portfolio-item">
+                <img src="/api/placeholder/200/200" alt="Company 14 logo" />
+            </div>
+            <div class="col-6 col-md-3 portfolio-item">
+                <img src="/api/placeholder/200/200" alt="Company 15 logo" />
+            </div>
+            <div class="col-6 col-md-3 portfolio-item">
+                <img src="/api/placeholder/200/200" alt="Company 16 logo" />
+            </div> -->
         </div>
-       
-
     </div>
 
-     <!-- Footer Start  -->
-     <footer class="last mt-5 py-3 bg-dark text-white">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <p><strong>Address:</strong> 1234 Kaicho St, Innovation City, KA 56789</p>
-                </div>
-                <div class="col-md-6 text-md-right">
-                    <p><strong>Email:</strong> hello@kaicho.org</p>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    <!--Scripts-->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.0/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
